fixed issue with overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,7 @@ body,
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-y: auto !important;
 }
 
 .builder > section:first-of-type {
